  . Implement #28382 (openssl_x509_parse() extensions support)

- Fixed XSLTProcessor::importStylesheet() to return TRUE on success (Christian)
- Fixed leaks in openssl_csr_sign and openssl_csr_new (Pierre)
- Fixed phpinfo() cutoff of variables at \0. (Ilia)
- Fixed a bug in the filter extension that prevented magic_quotes_gpc from
  being applied when RAW filter is used. (Ilia)
- Fixed bug #38322 (reading past array in sscanf() leads to arbitary code 
  execution). (Tony)
- Fixed bug #38303 (spl_autoload_register() supress all errors silently).
  (Ilia)
- Fixed bug #38289 (segfault in session_decode() when _SESSION is NULL). 
  (Tony)
- Fixed bug #38278 (session_cache_expire()'s value does not match phpinfo's 
  session.cache_expire). (Tony)
- Fixed bug #38276 (file_exists() works incorrectly with long filenames 
  on Windows). (Ilia, Tony)
- Fixed bug #38269 (fopen wrapper doesn't fail on invalid hostname with 
  curlwrappers enabled). (Tony)
- Fixed bug #38261 (openssl_x509_parse() leaks with invalid cert) (Pierre)
- Fixed bug #38255 (openssl possible leaks while passing keys) (Pierre)
- Fixed bug #38253 (PDO produces segfault with default fetch mode). (Tony)
- Fixed bug #38251 (socket_select() and invalid arguments). (Tony)
- Fixed bug #38236 (Binary data gets corrupted on multipart/formdata POST).
  (Ilia)
- Fixed bug #38234 (Exception in __clone makes memory leak). (Dmitry, Nuno)
- Fixed bug #38229 (strtotime() does not parse YYYY-MM format). (Ilia)
- Fixed bug #38224 (session extension can't handle broken cookies). (Ilia)
- Fixed bug #38220 (Crash on some object operations). (Dmitry)
- Fixed bug #38217 (ReflectionClass::newInstanceArgs() tries to allocate too 
  much memory). (Tony)
- Fixed bug #38214 (gif interlace output cannot work). (Pierre)
- Fixed bug #38213, #37611, #37571 (wddx encoding fails to handle certain 
  characters). (Ilia)
- Fixed bug #38212 (Segfault on invalid imagecreatefromgd2part() parameters).
  (Pierre)